feat: add thousandths

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@topgames/numbro",
-  "version": "2.1.0",
+  "version": "2.1.0-bi.0",
   "description": "Format and manipulate numbers.",
   "homepage": "http://numbrojs.com",
   "author": {
